# solar-control-anemometer

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.defaults  version.py
src/: CMakeLists.txt  anemometer.c  anemometer.h  config.h  http_server.c  http_server.h  index.html  led_status.c  led_status.h  main.c  mqtt_bridge.c  mqtt_bridge.h  nvs_store.c  nvs_store.h  power_mgr.c  power_mgr.h  wifi_config.c  wifi_config.h  wifi_manager.c  wifi_manager.h
